k8s/base/shell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell
  namespace: default
spec:
  volumes:
    - name: nfs-shared
      persistentVolumeClaim:
        claimName: nfs-shared
        readOnly: false
  containers:
  - image: graph-node-debug
    name: shell
    command:
      - /bin/sh
      - "-c"
      - "sleep infinity"
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - name: nfs-shared
        mountPath: /var/lib/graph
  restartPolicy: Always
