k8s/base/nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      role: nfs-server
  template:
    metadata:
      labels:
        role: nfs-server
    spec:
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs
            readOnly: false
      containers:
      - image: gists/nfs-server
        name: nfs-server
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        volumeMounts:
          - name: nfs
            mountPath: /nfs-share
---

kind: Service
apiVersion: v1
metadata:
  name: nfs-service
spec:
  selector:
    role: nfs-server
  ports:
    - name: tcp-2049
      port: 2049
      protocol: TCP
