k8s/base/prometheus.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus-proxy
          image: nginx-image
          ports:
            - containerPort: 80
          volumeMounts:
            - name: prometheus-proxy-config
              mountPath: /etc/nginx/
        - name: prometheus
          image: prometheus-image
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
            - "--web.listen-address=:9099"
            - "--web.external-url=https://localhost:9099/prometheus/"
            - "--storage.tsdb.retention.time=30d"
          ports:
            - containerPort: 9099
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/
            - name: prometheus-storage
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
        - name: prometheus-proxy-config
          configMap:
            defaultMode: 420
            name: prometheus-proxy-conf
        # Terraform creates this volume and claim
        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9099'
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: prometheus
      protocol: TCP
      port: 9099
      targetPort: 9099
