k8s/base/vector.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-node
spec:
  selector:
    app: vector-node
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: api
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vector-node
  labels:
    app: vector-node
spec:
  serviceName: vector-node
  replicas: 1
  selector:
    matchLabels:
      app: vector-node
  template:
    metadata:
      labels:
        app: vector-node
    spec:
      containers:
        - name: node
          image: vector-node
          ports:
            - name: api
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /ping
              port: 8000
          readinessProbe:
            httpGet:
              path: /ping
              port: 8000
